[gd_scene load_steps=3 format=3 uid="uid://cvhyf6hwnha4i"]

[ext_resource type="Script" uid="uid://g0lb7f85twnu" path="res://entities/objects/generic_portal/generic_portal.gd" id="1_2q2e8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cwr5l"]
size = Vector2(48, 32)

[node name="orange_portal" type="Area2D"]
collision_layer = 2147483648
collision_mask = 2147483776
script = ExtResource("1_2q2e8")
funnel_length = 128.0
funnel_width = 64.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(24, 0)
shape = SubResource("RectangleShape2D_cwr5l")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -16.0
offset_right = 8.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 1)

[node name="ColorRect" type="ColorRect" parent="ColorRect"]
layout_mode = 0
offset_left = 6.0
offset_right = 8.0
offset_bottom = 32.0

[node name="grid_aligned" type="ColorRect" parent="."]
editor_description = "tilemap aligned position, used for positioning"
offset_top = -8.0
offset_right = 16.0
offset_bottom = 8.0
color = Color(1, 1, 1, 0.5)

[node name="funnel_cone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 128

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="funnel_cone"]
position = Vector2(6, 0)
polygon = PackedVector2Array(0, 16, 0, -16, 128, -64, 128, 64)

[node name="travellers_container" type="ColorRect" parent="."]
clip_children = 1
z_index = 1
offset_top = -16.0
offset_right = 40.0
offset_bottom = 16.0

[node name="collision_container" type="StaticBody2D" parent="."]
modulate = Color(1, 0, 0, 1)
top_level = true
z_index = 1000
z_as_relative = false
collision_layer = 256
collision_mask = 256

[connection signal="body_entered" from="funnel_cone" to="." method="_on_funnel_cone_body_entered"]
[connection signal="body_exited" from="funnel_cone" to="." method="_on_funnel_cone_body_exited"]
